--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+# NPM modules
+node_modules/body-parser/*.*
+node_modules/express/*.*
+node_modules/mongoose/*.*
