--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
-    "mongoose": "^4.1.0"
+    "mongoose": "^4.1.0",
+    "mongoose-times": "^0.1.0"
   }
 }
